2006-02-09  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (main): waiting cursor action on startup

2006-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_move_files):
	Don't reverse items when moving them down (Closes: #330399)

2006-02-07  Erdal Ronahi  <erdal.ronahi@gmail.com>

	* configure.in: Added ku (Kurdish) to ALL_LINGUAS

2006-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_asf):
	Fix retval not being ignored (Closes: #330159)

2006-02-06  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/backend/bacon-video-widget-gst-0.10.c: (fixate_to_num),
	(set_audio_filter):
	Fix problems with setting the speaker arrangment as pointed out 
	by Tim - that it will fail when selecting '5.1' output against 
	a sound card that only supports stereo.

2006-02-06  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_play), (bacon_video_widget_get_mrls):
	  Don't claim to be able to play back DVDs when we aren't
	  (for now, at least) (#330086, patch by: Fernando Herrera).

2006-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_asf),
	(totem_pl_parser_parse_internal): Fix logic in the ASF parser,
	we were doing work on the data even though we didn't have any,
	don't look for super mime-types to ignore when we don't have one
	(Closes: #330120)
	* src/plparse/test-parser.c: add a test for the above bug

2006-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/test-parser.c: (entry_added), (test_parsing):
	Also print the genre of the URI, if available, and make parsing faster
	using an idle, instead of a timeout
	* src/plparse/totem-pl-parser.c:
	(totem_pl_parser_add_pls_with_contents): try to parse further inside
	.pls playlists to work around broken setups (Closes: #318749)

2006-02-05  Tim-Philipp Müller  <tim at centricular dot net>
