@@ -1,12 +1,14 @@
 New features and significant updates in version...
 
 1.3.91:
- * Show the waiting cursor when opening files, and parsing playlists
+ * Show the waiting cursor when opening files, parsing playlists and starting up
  * Add popup menu support with the keyboard to the playlist
+ * Don't reverse items when moving them down the playlist
  * Remove the scrollbars in the playlist when it's been emptied
  * Don't look for subtitles on HTTP servers
  * Don't show playlists as ignored after having parsed them successfully
  * Bigger and better logo
+ * Fix a possible crash with the ASF playlist parser
  * Add support for the target property, opening the movie in a stand-alone
  Totem (Mozilla plugin)
  * Add support for background music (Mozilla plugin)
@@ -18,6 +20,7 @@ New features and significant updates in version...
  * Better logo mode handling (GStreamer 0.8)
  * Free the video output after showing images (GStreamer 0.8)
  * Better key seek handling (GStreamer 0.10)
+ * Fix problems with setting the speaker arrangement (GStreamer 0.10)
  * Fix playback of files with non-16-bit audio (GStreamer 0.10)
  * Don't block when getting metadata (GStreamer 0.10)
  * Better error message when the decoder/demuxer doesn't support streaming
