@@ -1,3 +1,12 @@
+2006-02-10  Bastien Nocera  <hadess@hadess.net>
+
+	* NEWS: upd
+	* src/Makefile.am:
+	* src/backend/Makefile.am: build fixes by Sylvain Bertrand
+	<sylvain.bertrand@gmail.com> to look for libraries and headers in
+	the specified paths before looking in the system paths
+	(Closes: #330699)
+
 2006-02-09  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem.c: (main): waiting cursor action on startup
